# jarvis

./: README.md  main.py  pyproject.toml  requirements.txt
ai_engine/: __init__.py
ai_engine/agents/: __init__.py  news_aggregator_agent.py  summarizer.py
ai_engine/common/: __init__.py  gpt_utils.py  llm.py
backend/: server.py
backend/routes/: __init__.py
configs/: models.local.yaml  tools.yaml
frontend/: README.md
frontend/cli/: cli_launcher.py
scripts/: dev_run.sh  index_docs.py  ollama_smoke_test.py
server/: __init__.py  app.py
src/agent_core/: __init__.py  graph.py  memory.py
src/agent_core/llm/: base.py  openai_like.py
src/agent_core/llm/backends/: __init__.py  llama_cpp.py  mlc.py  ollama.py
src/agent_core/parsing/: chunk.py  embed.py  html_clean.py  rerank.py
src/agent_core/tools/: __init__.py  applescript.py  calendar.py  fs.py  shell.py  web_fetch.py
tests/: test_agent_graph.py  test_server.py  test_tools.py
tests/ai_engine/: test_news_aggregator_agent.py
